# AloLang-Dev

./: .clang-format  .gitignore  1  AUTHORS  ChangeLog  Makefile  Makefile copy.content  Makefile.am  Makefile.content  Makefile.in  NEWS  README  RELEASE NOTE.md  change.md  config.h.in~  configure  configure.ac  configure~  feature.md  logo.xcf  make-config  make-config.cc  package-lock.json  package.json  test.alo  test.alo.bc  test.alo.ll  test.alo.s  test02.alo  test02demo  todo.md  type.md
autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
compiler/: CompileUnit.cpp  CompileUnit.h  Token.cpp  Token.h  code_gen.cpp  code_parser.cpp  compileerror.hpp  cppfront.cpp  preprocessor.cpp  preprocessor.h  todo.md  token.h  utils.cpp  utils.h
compiler/ast/: AST_Base.cpp  AST_Base.h  AST_Expr.cpp  AST_Expr.h  BaseAST.cpp  BaseAST.h  CallExprAST.cpp  CallExprAST.h  CodeBlockAST.cpp  CodeBlockAST.h  ExprAST.cpp  ExprAST.h  ExternAST.cpp  ExternAST.h  FunctionAST.cpp  FunctionAST.h  IntExprAST.cpp  IntExprAST.h  PrototypeAST.cpp  PrototypeAST.h  VarExprAST.cpp  VarExprAST.h  VariableExprAST.cpp  VariableExprAST.h  todo
compiler/test/: alo.out  module  module.s  test01.alo  test02.alo  test03.alo.ac  types
compiler/yacc_stuff/: Token.cpp  Token.h  a.out  flextest.cc  lex.yy.cc  tokenizer.l
doc/: readme.md
docs/: CNAME  LICENCE.md  README.md  RELEASE NOTE.md  _coverpage.md  _sidebar.md  alcm.md  feature.md  gen_sidebar.py  index.html  index.md  math.md  readme.md  ssr.config.js  ssr.html  str.md  syntax.md  time.md  type.md  需求表格.csv
docs/language/: index.md
docs/language/basic_concepts/: index.md
docs/language/basic_concepts/ascii/: index.md
docs/language/basic_concepts/basic_types/: index.md
docs/language/basic_concepts/literal/: index.md
docs/language/basic_concepts/type/: index.md
docs/language/functions/: index.md
docs/language/keyword/: index.md
docs/language/keyword/alternative/: index.md
docs/language/keyword/alternative/and/: index.md
docs/language/keyword/alternative/not/: index.md
docs/language/keyword/alternative/or/: index.md
docs/language/keyword/alternative/xor/: index.md
docs/language/keyword/blank/: index.md
docs/language/keyword/literal/: index.md
docs/language/keyword/operators/: In&decrement.md  index.md
docs/language/keyword/statements/: index.md
docs/language/keyword/type/: index.md
docs/language/preprocessor/: index.md
docs/language/preprocessor/conditional/: index.md
docs/language/preprocessor/import/: index.md
docs/language/preprocessor/replace/: index.md
docs/language/statements/: index.md
docs/language/statements/linkage/: index.md
docs/old_docs/: feature.md  readme.md  type.md  需求表格.csv
libraries/: CSharp.cpp  HighAccuracyAlgorithm.cpp  alcm.all  complex.all  math  math.all  str  time.all
src/: CompileError.hpp  CompileUnit.cpp  CompileUnit.h  Makefile.am  Makefile.in  Preprocessor.cpp  Preprocessor.h  Token.cpp  Token.h  TokenSource.h  aloc.cpp  preprocessor.cpp  preprocessor.h  utils.cpp  utils.h
src/ast/: AllAST.h  AssignmentAST.cpp  AssignmentAST.h  BaseAST.cpp  BaseAST.h  BinaryExprAST.cpp  BinaryExprAST.h  BoolExprAST.cpp  BoolExprAST.h  CallExprAST.cpp  CallExprAST.h  ClassAST.cpp  ClassAST.h  CodeBlockAST.cpp  CodeBlockAST.h  DoubleExprAST.cpp  DoubleExprAST.h  EmptyExprAST.cpp  EmptyExprAST.h  ExprAST.cpp  ExprAST.h  ExternAST.cpp  ExternAST.h  FunctionAST.cpp  FunctionAST.h  IfExprAST.cpp  IfExprAST.h  IntExprAST.cpp  IntExprAST.h  KernelCallExprAST.cpp  KernelCallExprAST.h  KernelCompileExprAST.cpp  KernelCompileExprAST.h  MemberExprAST.cpp  MemberExprAST.h  PrototypeAST.cpp  PrototypeAST.h  ReturnExprAST.cpp  ReturnExprAST.h  SizeofExprAST.cpp  (+14 more)
src/ipc_Stuff/: genproto.cpp  genproto.h
src/lib/: 1.proto  Makefile.am  Makefile.in  Token.cpp  array.alo  io.alo  io.c  ipckernel.alo  ipckernel.cpp  math.alo  preprocessor.cpp  rand.alo  rand.c  string.alo  testPuts.c  testio.alo  testrand.alo  testrand.c  time.alo  time.c  types.alo  types.c  ucs4support.cpp  ucs4support.h  unsafe.alo  unsafe.c  usc4support.cpp  utils.cpp
src/lib/ast/: CallExprAST.cpp  CodeBlockAST.cpp  CodeBlockAST.h  ExternAST.cpp  ExternAST.h  FunctionAST.cpp  IfExprAST.cpp  TypeAST.cpp  VariableDefExprAST.h
src/lib/ipc/: ipc.proto
src/lib/ipc/ipccxx/: ipc.pb.cc  ipc.pb.h
src/lib/ipc/ipcpy/: ipc_pb2.py  listen.py  master.py  readproto.py
src/lib/lib/: Makefile.am  testPuts.c
src/lib/todo/: math.alo
src/lib/types/: aloipckernel.h  alostring.h
src/lib/yacc_stuff/: a.out
src/test/: demo.alo.bc  module.ll  test01.alo
src/yacc_stuff/: lex.yy.cc  tokenizer.cpp  tokenizer.l  tokenizer.ll  tokenizer.lpp
syntax_highlight_plugin/vscode/alolang/: CHANGELOG.md  README.md  alolang-0.0.1.vsix  alolang-0.0.2.vsix  alolang-0.0.3.vsix  alolang-0.0.4.vsix  alolang-0.0.5.vsix  alolang-0.0.6.vsix  package.json  vsc-extension-quickstart.md
syntax_highlight_plugin/vscode/alolang/syntaxes/: alolang.tmLanguage.json
test/: callpy.alo  classanytype.alo  classcheck.alo  demo.alo  demo.alo.bc  demo.alo.ll  demo.alo.s  demoa+b.alo  demoa+b.alo.bc  demoa+b.alo.ll  demoa+b.alo.s  globalvar.alo  loop.alo  loop.alo.bc  loop.alo.ll  loop.alo.s  module.s  mulret.alo  override.alo  recursion.alo  recursion.alo.bc  recursion.alo.ll  recursion.alo.s  test01.alo  test02.alo  test03.alo  unsafetest.alo  wrongstr.alo  wrongstr.alo.bc  wrongstr.alo.ll  wrongstr.alo.s
test/perfcheck/: demo.alo  demo.c  demo.py
tools/: demangle  demangle.cpp
(+41 files in other folders)
