AUTOMAKE_OPTIONS = foreign
lib_LTLIBRARIES = libalolangcore.la
libalolangcore_la_SOURCES = unsafe.c io.c ipckernel.cpp types.c rand.c ucs4support.cpp time.c
libalolangcore_la_LDFLAGS = -version-info 0:0:0
# libalolangcore_la_CFLAGS = -fPIC
# libalolangcore_la_CXXFLAGS = -fPIC

# alolanglibdir=$(libdir)
# alolanglib_PROGRAMS = libalolangcore.so
# libalolangcore_so_SOURCES = unsafe.c testPuts.c types.c testrand.c ucs4support.cpp
# libalolangcore_so_LDFLAGS = -shared -fPIC -static
